--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot[job-queue]
-httpx
-beautifulsoup4
-flask
-gunicorn
+python-telegram-bot[job-queue]==20.7
+httpx==0.27.0
+beautifulsoup4==4.12.2
+flask==3.0.0
+gunicorn==21.2.0
