--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 python-telegram-bot[job-queue]==20.7
 httpx==0.27.0
-beautifulsoup4==4.12.2
+beautifulsoup4==4.12.3
 flask==3.0.0
 gunicorn==21.2.0
+pytz==2023.3
